--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Next.js to GitHub Pages
 on:
   push:
     branches:
-      - main  # or 'master' if your branch is master
+      - master  # or 'master' if your branch is master
 
 permissions:
   contents: write  # Allow GitHub to push to gh-pages branch
