--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start",
-    "lint": "next lint",
-    "deploy": "npm run build && gh-pages -d out"
+ "scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
+  "export": "next export"
+},
+"export": "next export"
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
